bakkie_derive/tests/ui/fail/tool_invalid_attribute_key.stderr
error: unknown tool attribute
 --> tests/ui/fail/tool_invalid_attribute_key.rs:3:8
  |
3 | #[tool(invalid_key = "value")]
  |        ^^^^^^^^^^^
